[tool.poetry]
name = "chat-backend"
version = "0.1.0"
description = "Hugging Face Spaces backend for LLaMA 3 8B chat"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
transformers = "^4.35.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"